# audio-transcripter

./: README.md  pyproject.toml  transcricoes.json
transcripter/: main.py  transcricoes.json
